Changes in version 3.1.5 (2017-)

* Fixed warning message in function plotRiskProfile
* Fixed bug in variable selection for xModel=Mixed and missingX

--------------------------------------------
Changes in version 3.1.4 (2016-12-28)

* Included test to make sure that neighbourFile does not include islands
* Now discrete covariates can be inputed as factors as well as numeric
* Added the new model yModel="Quantile" which carries out a quantile-based model. The additional hyperparameter pQuantile (default=0.5) was also added. 
* The uCAR can now be initialised with given values, as well as randomly

--------------------------------------------
Changes in version 3.1.3 (2015-11-30)

* Removed over-smoothing of predictions in function calcPredictions()
* Fixed bug for spatial correlation for Gaussian response
* Fixed small issue with plotting for xModel=Mixed when only 1 continuous covariate is present

--------------------------------------------
Changes in version 3.1.2 (2015-08-26)

* Fixed bug in order of clusters plotted for yModel=Categorical in plotRiskProfile
* Fixed bug for predictions introduced in previous release

--------------------------------------------
Changes in version 3.1.1 (2015-03-18)

* Added description of output files in the manual
* Fixed bug in the function plotRiskProfile for xModel="Mixed" when only one Discrete covariate is provided
* Updated citation file
* Fixed bug in p(Z) for marginal model posterior
* Added conjugate Normal inverse Whishart prior for Normal covariates (Aurore Lavigne)

--------------------------------------------
Changes in version 3.1.0 (2015-03-13)

* Released with the publication of the Journal for Statistical Software
* Added updated reference to Journal for Statistical Software
* Fixed bugs for mixed covariates and variable selection
* Fixed memory leak for xModel=Mixed

--------------------------------------------
Changes in version 3.0.32 (2014-10-02)
